tests/NormalTests/paczka2/big_fuzzy/48266391.err
Error in line 1: GRL6FkJ3 S47 55,8
Error in line 2: GRL6FkJ3 S130 80,8
Error in line 3: jFJxt95wPDY A300 87,5
Error in line 17: A648 S130 11,8
Error in line 20: A648 A648 25,0
Error in line 10: lVS6bTYif S47 63,5
Error in line 27: lVS6bTYif S130 50,7
Error in line 34: jFJxt95wPDY S130 35,9
Error in line 43: lVS6bTYif A648 8,4
Error in line 47: 4WMpMeX4CkG A300 89,5
Error in line 46: lVS6bTYif A68 17,6
Error in line 67: A648 S130 60,9
Error in line 54: c9S S130 76,5
Error in line 95: jFJxt95wPDY S4 113,
Error in line 86: lVS6bTYif S130 42,1
Error in line 103: lVS6bTYif A648 368,6
Error in line 99: A648 S47 383,4
Error in line 114: A648 S130 13,5
Error in line 106: 4WMpMeX4CkG S130 6,5
Error in line 116: bxO S47 262,6
Error in line 120: 4WMpMeX4CkG A648 79,8
Error in line 128: c9S S47 50,4
Error in line 130: c9S A648 5,6
Error in line 121: bxO A648 10,5
Error in line 134: c9S S47 6,1
Error in line 141: jFJxt95wPDY A648 91,8
Error in line 160: jFJxt95wPDY S130 1,2
Error in line 156: A648 A300 3,5
Error in line 171: A648 A648 13,6
Error in line 177: A648 A648 74,24
Error in line 172: A648 A300 61,6
Error in line 185: lVS6bTYif S130 77,3
Error in line 190: lVS6bTYif A648 82,4
Error in line 183: 4WMpMeX4CkG A300 61,3
Error in line 204: GRL6FkJ3 S47 159,9
Error in line 210: jFJxt95wPDY A648 42,7
Error in line 205: A648 S47 8,5
Error in line 215: A648 A648 83,6
Error in line 191: lVS6bTYif A300 53,3
Error in line 222: A648 S47 61,5
Error in line 238: GRL6FkJ3 A300 43,1
Error in line 239: GRL6FkJ3 S47 5,0
Error in line 231: jFJxt95wPDY A300 15,0
Error in line 247: GRL6FkJ3 A648 99,5
